k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deltav
  labels:
    app: deltav
spec:
  type: ClusterIP
  selector:
    app: deltav
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
