k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deltav
  labels:
    app: deltav
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/backend-protocol: "http"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: wildcard-opalalign-cer
    appgw.ingress.kubernetes.io/backend-path-prefix: ""
    appgw.ingress.kubernetes.io/health-probe-path: "/"
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: scheduler.opalalign.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deltav
                port:
                  number: 80
